# qlik-migration-ts

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build_demo.py  build_formula_map.py  requirements.txt  sync-skills.sh
.claude-plugin/: marketplace.json
.claude/rules/: branching.md  content-structure.md  security.md  skill-naming.md  ts-cli.md  versioning.md
.github/: dependabot.yml
.github/workflows/: validate.yml
agents/cli/: SETUP.md
ci/: README.md  validate.yml
examples/: DEMO_RUNBOOK.md  Retail_Analytics_data_model.md  Retail_Analytics_types.json  reset_retail_demo.py
examples/builders/: build_demo.py  build_demo_liveboard.py  build_live.py  build_salesapp.py  build_salesapp_liveboard.py
q2t/: cli.py  ir.py
q2t/data/: qlik_ts_formula_map.csv  qlik_ts_formula_map.json
q2t/extract/: engine_artifacts.py  qlik_engine.py  qvf_offline.py  qvf_sqlite.py
q2t/load/: ts_client.py
q2t/transform/: expr.py  formula_map.py  migration_report.py  to_tml.py
qvf-engine-extract/: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
qvf-engine-extract/apps/: .gitkeep
qvf-engine-extract/src/: extract.js  session.js
scripts/: pre-commit.sh
tools/q2t-cli/: README.md  build_formula_map.py  pyproject.toml
tools/q2t-cli/q2t/: __init__.py  cli.py
tools/q2t-cli/q2t/extract/: __init__.py  qlik_cloud.py
tools/q2t-cli/q2t/transform/: migration_report.py  report.py  wh_types.py
tools/q2t-cli/tests/: test_expr.py  test_formula_map.py  test_ir.py  test_to_tml.py  test_wh_types.py
tools/validate/: check_all.py  (+6 more)
(+17 files in other folders)
